# module_b

./: .gitignore  README.md  module_b.postman_collection.json
api/: .env  alembic.ini  pyproject.toml  requirements.txt
api/migrations/: env.py
api/migrations/versions/: b6e9d270c9f7_add_file_reletionship.py
api/src/: database.db  database.py  run.py  settings.py
api/src/api/rest/: __init__.py  auth.py  files.py
api/src/middlewares/: __init__.py  auth.py  redirectAuthenticated.py
api/src/models/: __init__.py  file.py  fileAccess.py  user.py
app/: package-lock.json  package.json
app/src/: App.tsx  index.css  main.tsx
app/src/components/: ModalWindow.tsx  PrivateRoute.tsx  TokenValidator.tsx
app/src/pages/: AuthSignIn.tsx  AuthSignUp.tsx  Index.tsx  PageFiles.tsx  index.html
app/src/styles/: backend.css
